# HA-Light-Controller

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REFERENCE_GUIDE.md  SECURITY.md  SOFTWARE_DESIGN_DOCUMENT.md  USAGE.md  hacs.json  info.md  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  python_dev_env_setup.md
.circleci/: config.yml
.claude/: settings.json
.claude/skills/: README.md  discovery-methods.md
.claude/skills/ha-architecture/: SKILL.md
.claude/skills/ha-coordinator/: SKILL.md
.codex/: AGENTS.md
.contextstream/: config.json
.githooks/: pre-commit
.github/: AUTOMATION_GUIDE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: architecture-diagram-syncer.agent.md  changelog-automator.agent.md  cicd-health-monitor.agent.md  code-review-assistant.agent.md  configuration-auditor.agent.md  dependency-guardian.agent.md  documentation-curator.agent.md  installation-documentation-bot.agent.md  issue-triager.agent.md  stale-content-curator.agent.md  test-coverage-shepherd.agent.md
.github/workflows/: ci.yml  validate.yml
custom_components/ha_light_controller/: __init__.py  button.py  config_flow.py  const.py  controller.py  diagnostics.py  icons.json  manifest.json  preset_manager.py  quality_scale.yaml  sensor.py  services.yaml  strings.json
custom_components/light_controller/: button.py  const.py  manifest.json
docs/: AI Coding Agent Skills for Home Assistant Development.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_VERIFICATION_REPORT.md  HACS_INTEGRATION.md  LINK_VERIFICATION_REPORT.md  LOCALIZATION.md  MIGRATION_GUIDE.md  PERFORMANCE.md  QUALITY_CHECKLIST.md  README.md  SECURITY_BEST_PRACTICES.md
docs/ha-integration-base-files/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  ha_integration_agent_spec.md  ha_integration_agent_system_prompt.md  manifest.json  sensor.py  strings.json
docs/plans/: 2026-01-31-fix-preset-config-gaps.md  2026-01-31-remove-notifications-and-blueprints.md  2026-01-31-scope-simplification-design.md
resources/: AI Coding Agent Skills for Home Assistant Development.md  ha-dev-environment-requirements.md
resources/agents/: README.md  ha-integration-debugger.md  ha-integration-dev.md  ha-integration-reviewer.md
scripts/: verify_environment.py  verify_links.py
test-results/: .last-run.json
tests/: __init__.py  conftest.py  test_button.py  test_config_flow.py  test_controller.py  test_diagnostics.py  test_init.py  test_preset_manager.py  test_sensor.py
tests/e2e/: light-controller.spec.js  playwright.config.js
(+29 files in other folders)
